--- a/spotify-clone/index.html
+++ b/spotify-clone/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/spotify-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/spotify-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Spotify-Clone</title>
   </head>
